Bug 305076 - Sometimes the image is not in a new line
Summary: Sometimes the image is not in a new line
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui-message-filters (other bugs)
Version First Reported In: git-latest
Platform: unspecified Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-13 12:10 UTC by Daniele E. Domenichelli
Modified: 2012-08-13 13:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.5.0
Sentry Crash Report:


Attachments
Screenshot showing 2 different images, the first one does not have a line break (130.89 KB, image/png)
2012-08-13 12:10 UTC, Daniele E. Domenichelli
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Daniele E. Domenichelli 2012-08-13 12:10:17 UTC
Created attachment 73139 [details]
Screenshot showing 2 different images, the first one does not have a line break

Sometimes when you link an image, the image is inserted without a line break.
Comment 1 David Edmundson 2012-08-13 13:09:07 UTC
>
> Git commit 5f87c642593033584fff7002be794b16377419a9 by David Edmundson.
> Committed on 13/08/2012 at 15:00.
> Pushed by davidedmundson into branch 'master'.
>
> Make sure all image previews are on a new line.
> Reviewed-by: Martin Klapetek
>
> M  +3    -3    filters/images/images-filter.cpp
>