Make sure all image previews are on a new line.

BUG: 305076
Reviewed-by: Martin Klapetek